KB-11668 SonarQube issue fixes